# soc-saas-v2

./: .editorconfig  .env.example  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .env.example  Dockerfile  ensure_schema.py  pyproject.toml  railway.toml  start.sh  worker.Dockerfile
backend/app/: main.py
backend/app/ai/: analyzer.py  chat.py  investigation_analyzer.py  prompt_guard.py  rag.py
backend/app/analyst/: cases.py  notes.py  schemas.py  service.py  timeline_api.py
backend/app/connectors/: router.py
backend/app/core/: config.py  dependencies.py  exceptions.py  metrics.py  middleware.py  redis.py  security.py  utils.py
backend/app/correlation/: engine.py
backend/app/detection/: default_rules.py  engine.py  evaluator.py  grouping.py  patterns.py
backend/app/events/: search.py
backend/app/ingestion/: router.py  service.py
backend/app/models/: __init__.py  agent.py  alert.py  audit_log.py  detection_rule.py  event.py  installer_token.py  investigation.py  playbook.py  playbook_action_types.py  rag_chunk.py  response_action.py  tenant.py  tenant_member.py  ticket.py  user.py
backend/app/normalization/: mapper.py  service.py
backend/app/pipeline/: consumer.py  publisher.py  stream_names.py
backend/app/rbac/: permissions.py  roles.py
backend/app/realtime/: broadcaster.py
backend/app/schemas/: agent.py  alert.py  auth.py  event.py  playbook.py  tenant.py
backend/app/services/: agent_service.py  alert_service.py  audit_service.py  auth_service.py  containment_service.py  email_service.py  installer_service.py  mfa_service.py  notification_service.py  outbound_notification_service.py  playbook_seed.py  playbook_service.py  report_generator_service.py  tenant_service.py
backend/app/threat_intel/: geoip.py  service.py
backend/app/ueba/: anomaly.py  (+6 more)
backend/migrations/: env.py
backend/scripts/: bootstrap.ps1  repair.ps1  soc_agent_v2.py
backend/tests/: conftest.py
(+208 files in other folders)
